# ludus-sdk

./: Cargo.toml  LICENSE  README.md
models/: README.md
src/: lib.rs  micro_neural.rs  neural.rs  nnue.rs
src/exemple/: chessbot.rs  neuralbot.rs
