[package]
name = "ludus-sdk"
version = "0.1.0"
edition = "2024"
description = "Ludus Bot SDK — Write your bot in Rust and compile it to WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[profile.release]
# Optimize for size to reduce the final WASM binary size
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
